--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="./assets/img/angular.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>GOTO/HR-ANALYTICS</title>
+    <title>HR-ANALYTICS</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
